[project]
name = "smps-hourly-auto-plot"
version = "0.1.0"
description = "SMPS Hourly Auto Plot"
authors = [{ name = "Congrong Wang", email = "me@congrong.wang" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "cr-asos @ git+https://github.com/congrong-wang/cr-ASOS.git",
    "cr-smps @ git+https://github.com/congrong-wang/cr-SMPS.git",
]
